<package format="2">
  <name>model_ccdhrm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for model_ccdhrm</p>
    <p>This package contains configuration data, 3D models and launch files
for C-CDHRM robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="luomingrui2020@ia.ac.cn" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>